# pingclair

./: .gitignore  Cargo.toml  Dockerfile  ISSUES.md  LICENSE  README.md  implementation_plan.md.resolved
.github/workflows/: release.yml  rust.yml
deployment/: Dockerfile  pingclair.service
docs/: AUDIT_NGINX_PARITY.md
examples/: Pingclairfile.example  basic.pingclair  full_featured.pingclair  reverse_proxy.pingclair
examples/public/: index.html
pingclair/: Cargo.toml  test_output.txt
pingclair-api/: Cargo.toml
pingclair-api/src/: auth.rs  handlers.rs  lib.rs  routes.rs  server.rs
pingclair-config/: Cargo.toml
pingclair-config/src/: compiler.rs  lib.rs
pingclair-config/src/adapter/: caddyfile.rs  json.rs  mod.rs
pingclair-config/src/parser/: ast.rs  caddy_ast.rs  lexer.rs  mod.rs  parser.rs  semantic.rs  variables.rs
pingclair-core/: Cargo.toml
pingclair-core/src/: error.rs  lib.rs
pingclair-core/src/config/: loader.rs  mod.rs  types.rs
pingclair-core/src/server/: handlers.rs  mod.rs  redirect.rs  router.rs  tls.rs
pingclair-plugin/: Cargo.toml
pingclair-plugin/src/: lib.rs  loader.rs  registry.rs  traits.rs
pingclair-proxy/: Cargo.toml
pingclair-proxy/src/: connection_filter.rs  health_check.rs  lib.rs  load_balancer.rs  metrics.rs  quic.rs  rate_limit.rs  server.rs  upstream.rs
pingclair-static/: Cargo.toml
pingclair-static/src/: compress.rs  file_server.rs  lib.rs  mime.rs
pingclair-tls/: Cargo.toml
pingclair-tls/src/: acme.rs  auto_https.rs  cert_store.rs  lib.rs  manager.rs  persistent_challenge_handler.rs  quic.rs
pingclair/src/: main.rs
pingclair/tests/: integration.rs
scripts/: install.sh  pingclair.service  uninstall.sh
