[package]
name = "pingclair-tls"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "TLS and ACME automation for Pingclair"

[dependencies]

tokio.workspace = true
async-trait.workspace = true
tracing.workspace = true
rustls.workspace = true
rcgen.workspace = true
x509-parser.workspace = true
serde.workspace = true
thiserror.workspace = true

# ACME (Let's Encrypt)
instant-acme = "0.8"
tokio-rustls = "0.26"
webpki-roots = "0.26"

# HTTP/3 (QUIC)
quinn.workspace = true
h3.workspace = true
h3-quinn.workspace = true

# Certificate parsing
rustls-pemfile = "2"
serde_json = "1"

# HTTP types
http.workspace = true
bytes.workspace = true

# 文件系统
dirs.workspace = true
futures = "0.3.31"
parking_lot = "0.12"


