[package]
name = "pingclair"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "A modern, high-performance web server built on Pingora"

[[bin]]
name = "pingclair"
path = "src/main.rs"

[dependencies]
pingclair-core = { path = "../pingclair-core" }
pingclair-config = { path = "../pingclair-config" }
pingclair-proxy = { path = "../pingclair-proxy" }
pingclair-static = { path = "../pingclair-static" }
pingclair-tls = { path = "../pingclair-tls" }
pingclair-api = { path = "../pingclair-api" }
pingclair-plugin = { path = "../pingclair-plugin" }

pingora = { workspace = true, features = ["proxy", "openssl"] }
openssl = { version = "0.10", features = ["v110"] }

pingora-core = { workspace = true, features = ["connection_filter"] }
pingora-proxy.workspace = true
rustls.workspace = true

clap.workspace = true
async-trait.workspace = true

tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
parking_lot = "0.12"
futures = "0.3"


[target.'cfg(target_os = "linux")'.dependencies]
tikv-jemallocator = "0.6"

[dev-dependencies]
serde_json.workspace = true
reqwest = { version = "0.11", features = ["json", "blocking"] }
tokio = { workspace = true, features = ["full"] }
tempfile = "3.8"
uuid = { version = "1.0", features = ["v4"] }
flate2 = "1.0"
